# weather_routing

./: .coverage  .gitignore  AGENTS.md  README.md  ROUTING_MODAL_DATASET_HANDOFF.md  environment.yml  isochronal_weather_router.py  point_validity.py  polar.py  pyproject.toml  pyroject.toml  requirements-dev.txt  requirements.txt  run_tests.py  visualize.py
.githooks/: pre-push
.github/workflows/: python-app.yml
data/: era5_land-sea-mask.nc  t.py
deploy/modal/: README.md  requirements.txt  weather_routing_server.py
dev/: env.yaml  get_mask.ipynb  install_git_hooks.sh  polar_speed_cli.py  to_zarr.ipynb
dev/polars/: Argonaut_Samoa_47.pol  Valiant47.pol
docs/: code-backlog.md  qtvlm_vs_isochronal.md
example/: example.ipynb  example_Cape2Rio.ipynb
example/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
junit/: test-results.xml
src/: isochronal_weather_router.py  point_validity.py
src/weather_router/: dummy_qtvlm_style.py  isochronal_weather_router.py  point_validity.py  polar.py  utils_geo.py  utils_numba.py  visualize.py  weather_sources.py  wind_lookup.py
test/: antimeridian_equator_plot.py  antimeridian_equator_route.py  antimeridian_equator_test.py  demo_timing.py  routing_test.py  run_tests.py  visualize_test.py  weather_sources_test.py
test/test_ds.zarr/: .zmetadata
test/test_ds.zarr/lat/: .zarray  .zattrs  0
test/test_ds.zarr/lon/: .zarray  0
test/test_ds.zarr/time/: .zarray  0
test/test_ds.zarr/twd/: .zarray  0.0.0  0.0.1  0.1.0  0.1.1  1.0.0  1.0.1  1.1.0  1.1.1
test/test_ds.zarr/tws/: 0.0.0  0.0.1  0.1.0  0.1.1  1.0.0  1.0.1  1.1.0  (+1 more)
