[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "weather_router"
version = "0.0.1"
authors = [
  { name="Peter Marsh", email="petermarsh790@gmail.com" },
]
description = "A Pure Python Weather Routing Tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "geopy",
    "numba>=0.59",
    "xarray",
    "zarr",
    "fsspec",
    "aiohttp",
    "requests",
    "netcdf4",
    "scipy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/peterm790/weather_routing"
"Bug Tracker" = "https://github.com/peterm790/weather_routing/issues"
